editing video and css

--- a/singl-palais.html
+++ b/singl-palais.html
@@ -208,7 +208,7 @@
             <div class=" col-md-6 col-lg-4 col-xl-4 wow fadeInUp" data-wow-delay="0.1s"
                  style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
                 <a href="javascript:void (0)" data-bs-toggle="modal"
-                   data-src="https://www.youtube.com/embed/REDVbTQxMXo?si=mboj28wqW3ntP54A" data-bs-target="#videoModal"
+                   data-src="https://www.youtube.com/embed/8nSuy9tC2Mc?si=_nQAXiaeEj__ZhlY" data-bs-target="#videoModal"
                    class="text-center btn-play">
                     <div class="row-cols-1 feature-item p-4">
                         <div class="col-12 video">
@@ -280,10 +280,11 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
+
                 <div class="ratio ratio-16x9">
                     <iframe
                             id="video"
-                            src="https://www.youtube.com/embed/REDVbTQxMXo?si=mboj28wqW3ntP54A"
+                            src="https://www.youtube.com/embed/8nSuy9tC2Mc?si=_nQAXiaeEj__ZhlY"
                             frameborder="0"
                             allowfullscreen
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -317,7 +318,7 @@
 <!-- Модальное окно -->
 <style>
     .modal-xl {
-        max-width: 85%; 
+        max-width: 85%;
     }
     .modal-body {
         padding: 20px;
@@ -373,7 +374,7 @@
     }
 
     .owl-dot.active {
-        background: #fff; /* Цвет активной точки */
+        background: red; /* Цвет активной точки */
     }
 
     .owl-dot:hover {
