--- a/index.html
+++ b/index.html
@@ -94,17 +94,26 @@
                 </div>
             </nav>
 
-
+            <style>
+                /*.display-1 {*/
+                /*    font-size: 4rem;*/
+                /*    text-transform: capitalize;*/
+                /*    margin-bottom: 1rem;*/
+                /*    background: linear-gradient(to right, #ff7e5f, #feb47b); !* Градиентные цвета *!*/
+                /*    -webkit-background-clip: text;*/
+                /*    -webkit-text-fill-color: transparent; !* Прозрачный текст с градиентом *!*/
+                /*}*/
+            </style>
             <!-- Carousel Start -->
             <div class="header-carousel owl-carousel">
                 <div class="header-carousel-item">
                     <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
                     <div class="carousel-caption">
                         <div class="carousel-caption-content p-3">
-                            <h1 class="display-1 text-capitalize text-white mb-4">Historical France</h1>
-                            <p class="mb-5 fs-5">
-                                The history of Paris dates back to approximately 259 BC, with the Parisii, a Celtic tribe settled on the banks of the Seine. In 52 BC, the fishermen village was conquered by the Romans, founding a Gallo-Roman town called Lutetia.                            </p>
-                            <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">More</a>
+                            <h1 class="display-1 text-capitalize text-white mb-4">LA FRANCE HISTORIQUE</h1>
+                            <p class="mb-5 fs-3">
+                                Architecture, histoire et patrimoine culturel de France
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -130,11 +139,14 @@
             <div class="container py-5">
                 <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="sub-style">
-                        <h4 class="sub-title px-3 mb-0">What We Do</h4>
+                        <h4 class="sub-title px-3 mb-0">LA FRANCE HISTORIQUE</h4>
                     </div>
 <!--                    <h1 class="display-3 mb-4">Our Service Given Physio Therapy By Expert.</h1>-->
                     <p class="mb-0">
-                        We offer users virtual tours of cities and (monuments, cathedrals, castles) in France, allowing them to explore history from the comfort of their homes.                    </p>
+                        visites virtuelles de villes et (monuments,
+                        cathédrale, château)
+                        France. vous permettant de découvrir l'histoire des villes françaises sans sortir de chez vous
+                    </p>
                 </div>
                 <div class="row g-4 justify-content-center" id="services-container">
                     <!-- Paris -->
