--- a/Palais.html
+++ b/Palais.html
@@ -120,10 +120,10 @@
 <div class="container-fluid service">
     <div class="container py-5">
         <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="sub-style">
-                <h4 class="sub-title px-3 mb-0">Palais</h4>
-            </div>
-            <h1 class="display-3 mb-4">Palais of Paris</h1>
+<!--            <div class="sub-style">-->
+<!--                <h4 class="sub-title px-3 mb-0">Lieux</h4>-->
+<!--            </div>-->
+            <h1 class="display-3 mb-4">Lieux historiques de Paris</h1>
             <p class="mb-0"> Paris, the city of light, is home to some of the world's most iconic Palais .
                 Explore the Eiffel Tower, Notre-Dame Cathedral, and the Louvre Museum.
                 Discover the Arc de Triomphe, Sacré-Cœur Basilica, and many other breathtaking landmarks.</p>
@@ -132,25 +132,39 @@
             <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded">
                     <div class="service-img rounded-top">
-                        <img src="img/palais/champs-elysees-arc-de-triomphe.jpg" class="img-fluid-old rounded-top w-100" alt="">
+                        <img src="img/palais/Notre-Dame de Paris.jpg" class="img-fluid-old rounded-top w-100" alt="">
                     </div>
                     <div class="service-content rounded-bottom bg-light p-4">
                         <div class="service-content-inner">
-                            <h5 class="mb-4">Arc de Triomphe à Paris</h5>
+                            <h5 class="mb-4">Notre-Dame de Paris</h5>
                             <p class="mb-4">Le célèbre Arc de Triomphe de Paris est situé sur l'ancienne place des Stars, aujourd'hui place Charles de Gaulle Place des Stars, aujourd'hui place Charles de Gaulle</p>
                             <a href="singl-palais.html" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded">
                     <div class="service-img rounded-top">
-                        <img src="img/palais/arenes-de-lutece-paris-zigzag.jpg" class="img-fluid-old rounded-top w-100" alt="">
+                        <img src="img/palais/champs-elysees-arc-de-triomphe.jpg" class="img-fluid-old rounded-top w-100" alt="">
                     </div>
                     <div class="service-content rounded-bottom bg-light p-4">
                         <div class="service-content-inner">
-                            <h5 class="mb-4">Arènes de Lutèce</h5>
+                            <h5 class="mb-4">Cathédrales de Paris</h5>
+                            <p class="mb-4">Le célèbre Arc de Triomphe de Paris est situé sur l'ancienne place des Stars, aujourd'hui place Charles de Gaulle Place des Stars, aujourd'hui place Charles de Gaulle</p>
+                            <a href="singl-palais.html" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="service-item rounded">
+                    <div class="service-img rounded-top">
+                        <img src="img/palais/Conciergerie.jpg" class="img-fluid-old rounded-top w-100" alt="">
+                    </div>
+                    <div class="service-content rounded-bottom bg-light p-4">
+                        <div class="service-content-inner">
+                            <h5 class="mb-4">Conciergerie</h5>
                             <p class="mb-4">Le célèbre Arc de Triomphe de Paris est situé sur l'ancienne place des Stars, aujourd'hui place Charles de Gaulle Place des Stars, aujourd'hui place Charles de Gaulle</p>
                             <a href="singl-palais.html" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
                         </div>
@@ -185,14 +199,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-item rounded">
                     <div class="service-img rounded-top">
-                        <img src="img/palais/Conciergerie.jpg" class="img-fluid-old rounded-top w-100" alt="">
+                        <img src="img/palais/arenes-de-lutece-paris-zigzag.jpg" class="img-fluid-old rounded-top w-100" alt="">
                     </div>
                     <div class="service-content rounded-bottom bg-light p-4">
                         <div class="service-content-inner">
-                            <h5 class="mb-4">Conciergerie</h5>
+                            <h5 class="mb-4">Arènes de Lutèce</h5>
                             <p class="mb-4">Le célèbre Arc de Triomphe de Paris est situé sur l'ancienne place des Stars, aujourd'hui place Charles de Gaulle Place des Stars, aujourd'hui place Charles de Gaulle</p>
                             <a href="singl-palais.html" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
                         </div>
