--- a/singl-palais.html
+++ b/singl-palais.html
@@ -152,43 +152,20 @@
     </style>
     <div class="container pt-5">
         <div class="g-5 align-items-center">
-            <img src="img/palais/champs-elysees-arc-de-triomphe.jpg" alt="Image" class="image">
+            <img src="img/palais/Notre-Dame de Paris.jpg" alt="Image" class="image">
             <div class=" text-start mb-3">
-                <h4 class="sub-title pe-3 mb-0">Palais - <span>Arc de Triomphe à Paris</span></h4>
-                <h1 class="display-3 mb-4">Arc de Triomphe à Paris</h1>
+<!--                <h4 class="sub-title pe-3 mb-0">Cathédrale  Notre-Dame de Paris</span></h4>-->
+                <h1 class="display-3 mb-4" style="font-size: 30px;">Cathédrale  Notre-Dame de Paris</h1>
             </div>
-            <p> Le célèbre Arc de Triomphe de Paris est situé sur l'ancienne place des Stars, aujourd'hui place Charles
-                de Gaulle Place des Stars, aujourd'hui place Charles de Gaulle. Plus précisément, l'arc a été construit
-                sur la colline de Chaillot, qui se trouve au sommet des Champs-Élysées . Lors de sa construction, l'arc
-                dépassait largement les limites de la ville, lorsque la place ronde de l'Étoile jouxtait l'avant-poste
-                de Chaillot. La place des étoiles n'a reçu ses « rayons » qu'en 1854, lorsque 12 rues ont commencé à en
-                être construites. La place porte le nom du commandant Charles de Gaulle en 1969.
-                La première pierre des fondations de l'arc a été posée par l'empereur français Napoléon Ier. L'arc
-                devait être construit en l'honneur de la conquête triomphale de toute l'Europe et de la Russie par
-                Napoléon. Mais l'effondrement de l'armée napoléonienne a conduit au report de la construction sine die.
-                La construction du monument architectural fut reprise sous Louis Philippe Ier ; l'arc fut achevé en
-                1836.
-                L'auteur du projet de l'édifice grandiose est Jean-François Chalgrin, il s'est inspiré des arcs de
-                triomphe des empereurs romains. Les arches de la Rome antique ont été érigées en mémoire d’événements
-                importants, de personnes et en l’honneur d’une divinité. Les dimensions de l'Arc de Triomphe parisien
-                dépassent largement les paramètres des exemples anciens. Ainsi, la hauteur de l'arc est de 50 mètres et
-                la largeur de 45. La frise de l'arc du côté est est ornée de bas-reliefs représentant le début de la
-                campagne de l'armée française, et du côté ouest - son retour. Sur 30 écus, le grenier (le nom de l'étage
-                supérieur) rappelle les victoires en Afrique et en Europe. Les bas-reliefs atteignent une hauteur de 12
-                mètres. Les bas-reliefs « La Marseillaise » et « Apothéose de Napoléon » font face aux Champs Elysées,
-                et « Résistance à l'invasion » avec « Apothéose du monde » - sur l'avenue de la Grande Armée.
-                Le bas-relief le plus célèbre de l'Arc de Triomphe est le bas-relief « La Marseillaise, ou la Marche des
-                Volontaires en 1792 » du sculpteur François Rude. Le maître acheva les travaux sur la composition en
-                1832. Il représente des guerriers marchant à l’unisson sous la bannière de la déesse de la victoire.
-                Victoria ailée est en avance sur les troupes, comme une allégorie de la révolution, de la liberté, de la
-                Patrie, de la victoire et de l'hymne révolutionnaire « La Marseillaise ».
-                Sous les arcades, les noms des officiers de l'armée de Napoléon sont gravés dans la pierre. Depuis 1920,
-                sous l'arche se trouve la Tombe du Soldat inconnu. La flamme éternelle, en hommage aux héros qui ont
-                donné leur vie pour la France pendant la Première Guerre mondiale, brûle d'une flamme orange
-                translucide. À l'intérieur de l'Arc de Triomphe se trouve un musée sur l'histoire de la structure. Et
-                sur le toit se trouve une plate-forme d'observation d'où s'ouvre un panorama époustouflant sur la
-                magnifique ville.
-                L'Arc de Triomphe n'a jamais été témoin du triomphe de l'empereur Napoléon. Mais en 1</p>
+            <p>
+                L’histoire de la Cathédrale est étroitement liée à l’Histoire de France. Construite au XIIe siècle, modifiée au XVIIIe siècle puis restaurée au XIXe siècle, elle est le symbole du culte chrétien à Paris au cours des siècles.
+                Au IVe siècle, avec l’avènement de Clovis, Paris devient « capitale » chrétienne du royaume des Francs. C’est alors qu’une première cathédrale Saint-Etienne est bâtie au VIe siècle. L’essor de la ville débute au XIIe siècle après les invasions normandes. La ville prospère, elle devient un lieu d’échanges artistiques et intellectuels, dotée de collèges et d’une université de philosophie et théologie. C’est ainsi que débute l’histoire de Notre Dame.
+                Parallèlement, les croisades vers Jérusalem et les pèlerinages vers Saint-Jacques-de-Compostelle déplacent des milliers de fidèles sur les chemins. L’île de la cité est une étape incontournable pour franchir la Seine. De fait, les fidèles affluent dans le quartier de la cité. Ils génèrent de l’activité commerciale et des offrandes pour le culte. Dans ce contexte, Maurice de Sully, évêque de Paris, entreprend la construction d’une nouvelle et vaste cathédrale pour accueillir les fidèles. Au XIIIe siècle, la population de Paris double.
+                Saint Louis ramène de Jérusalem les reliques de la passion du Christ. Elles arrivent à Paris en 1239 où le roi les porte en procession dans Notre-Dame. Ces reliques seront ensuite conservées dans la Sainte-Chapelle jusqu’à la Révolution. Elles rejoindront le trésor de Notre-Dame en 1806.
+                La cathédrale s’agrandit et se modifie pour devenir un modèle de l’architecture religieuse. Durant la Renaissance, les goûts évoluent, son attrait est délaissé. Au XVIIe siècle, par le vœu de Louis XIII, le royaume se place sous la protection de la Vierge et promet un nouveau maître-autel pour la cathédrale – qui sera réalisé par son fils, Louis XIV. De grands aménagements ont lieu au XVIIIe siècle. Malmenée par les intempéries et la Révolution, la cathédrale menace de s’effondrer au XIXe siècle. Portée par un regain de popularité grâce à Notre-Dame de Paris de Victor Hugo, l’État décide de travaux de restauration au XIXe siècle. Classée au patrimoine mondial de l’UNESCO en 1991, la cathédrale est un haut lieu du culte chrétien et le monument le plus visité de France en 2018.
+                A la suite de l’incendie du 15 avril 2019, qui détruit la charpente médiévale et la flèche de la cathédrale, un important chantier de restauration est mené afin de la rouvrir au culte et aux visiteurs le 8 décembre 2024.
+
+            </p>
         </div>
     </div>
 
