--- a/Paris.html
+++ b/Paris.html
@@ -122,16 +122,16 @@
                         <div class="col-sm-6">
                             <div class="d-flex flex-column h-100">
                                 <div class="mb-4">
-                                    <h5 class="mb-3"><i class="fa fa-check text-primary me-2"></i>Foundation</h5>
+                                    <h5 class="mb-3"><i class="fa fa-check text-primary me-2"></i>Premières étapes</h5>
                                     <p class="mb-0">
-                                        The history of Paris dates back to approximately 259 BC, with the Parisii, a Celtic tribe settled on the banks of the Seine. In 52 BC, the fishermen village was conquered by the Romans, founding a Gallo-Roman town called Lutetia.
+                                        L’histoire de Paris remonte autour de l’an 259 avant J-C, lorsque la petite tribu des Parisii fonda la ville sur la rive droite de la Seine. Ce premier peuple de pêcheurs tomba entre les mains des Romains qui fondèrent la ville de Lutèce en l’an 52 avant J-C.
                                     </p>
                                 </div>
                                 <div class="mb-4">
-                                    <h5 class="mb-3"><i class="fa fa-check text-primary me-2"></i> Foundation</h5>
+                                    <h5 class="mb-3"><i class="fa fa-check text-primary me-2"></i> Premières étapes</h5>
                                     <p class="mb-0">
-                                        The city changed its name to Paris during the fourth century. During this period, the city was threatened by Attila the Hun and his army, and according to the legend, the inhabitants of Paris resisted the attacks thanks to the providential intervention of Saint Geneviève (patron saint of the city).
-                                    </p>
+
+                                        L’histoire de Paris remonte autour de l’an 259 avant J-C, lorsque la petite tribu des Parisii fonda la ville sur la rive droite de la Seine. Ce premier peuple de pêcheurs tomba entre les mains des Romains qui fondèrent la ville de Lutèce en l’an 52 avant J-C.                                    </p>
                                 </div>
                                 <div class="text-start mb-4">
                                     <a href="#" class="btn btn-primary rounded-pill text-white py-3 px-5">More Details</a>
@@ -212,7 +212,7 @@
 <!--                    One of the last riots to take place in Paris was in March 2006, when students poured out onto the streets and protested against the labour market reform.-->
 <!--                    In November 2015, Paris witnessed a tragic event, several terrorist attacks hit the city and the suburbs of Saint-Denis, killing 137 people and injuring 415.-->
 <!--                </p>-->
-                <div class="row g-4 justify-content-center" style="margin-top: 40px;">
+                <div class="row g-4 justify-content-center" style="margin-top: 60px;">
                     <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.1s">
                         <a href="Palais.html" class="text-center">
                             <div class="row-cols-1 feature-item p-4">
@@ -247,23 +247,23 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <a href="Palais.html"  class="text-center">
-                            <div class="row-cols-1 feature-item p-4">
-                                <div class="col-12">
-                                    <div class="feature-icon mb-4">
-                                        <div class="p-3 d-inline-flex bg-white rounded">
-                                            <i class="fas fa-church fa-4x text-primary"></i>
-                                        </div>
-                                    </div>
-                                    <div class="feature-content d-flex flex-column">
-                                        <h5 class="mb-4">Cathedrals de Paris</h5>
-                                        <p class="mb-0">Larn sea about these blocks and unique features.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+<!--                    <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.3s">-->
+<!--                        <a href="Palais.html"  class="text-center">-->
+<!--                            <div class="row-cols-1 feature-item p-4">-->
+<!--                                <div class="col-12">-->
+<!--                                    <div class="feature-icon mb-4">-->
+<!--                                        <div class="p-3 d-inline-flex bg-white rounded">-->
+<!--                                            <i class="fas fa-church fa-4x text-primary"></i>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    <div class="feature-content d-flex flex-column">-->
+<!--                                        <h5 class="mb-4">Cathedrals de Paris</h5>-->
+<!--                                        <p class="mb-0">Larn sea about these blocks and unique features.</p>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
                     <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.5s">
                         <a href="Palais.html"  class="text-center">
                             <div class="row-cols-1 feature-item p-4">
@@ -298,23 +298,23 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <a href="Palais.html"  class="text-center">
-                            <div class="row-cols-1 feature-item p-4">
-                                <div class="col-12">
-                                    <div class="feature-icon mb-4">
-                                        <div class="p-3 d-inline-flex bg-white rounded">
-                                            <i class="fas fa-mosque fa-4x text-primary"></i>
-                                        </div>
-                                    </div>
-                                    <div class="feature-content d-flex flex-column">
-                                        <h5 class="mb-4">Monuments de Paris</h5>
-                                        <p class="mb-0">Larn sea about these blocks and unique features.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+<!--                    <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.7s">-->
+<!--                        <a href="Palais.html"  class="text-center">-->
+<!--                            <div class="row-cols-1 feature-item p-4">-->
+<!--                                <div class="col-12">-->
+<!--                                    <div class="feature-icon mb-4">-->
+<!--                                        <div class="p-3 d-inline-flex bg-white rounded">-->
+<!--                                            <i class="fas fa-mosque fa-4x text-primary"></i>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    <div class="feature-content d-flex flex-column">-->
+<!--                                        <h5 class="mb-4">Monuments de Paris</h5>-->
+<!--                                        <p class="mb-0">Larn sea about these blocks and unique features.</p>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
                     <!--                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">-->
                     <!--                        <a href="">-->
                     <!--                        <div class="row-cols-1 feature-item p-4">-->
@@ -401,7 +401,7 @@
                     </div>
 <!--                    <h1 class="display-3 mb-4">Why Choose Us! Get Your Life Style Back</h1>-->
                     <p class="mb-0">
-                        The history of Paris dates back to approximately 259 BC, with the Parisii, a Celtic tribe settled on the banks of the Seine. In 52 BC, the fishermen village was conquered by the Romans, founding a Gallo-Roman town called Lutetia.
+                        L’histoire de Paris remonte autour de l’an 259 avant J-C, lorsque la petite tribu des Parisii fonda la ville sur la rive droite de la Seine. Ce premier peuple de pêcheurs tomba entre les mains des Romains qui fondèrent la ville de Lutèce en l’an 52 avant J-C.
                     </p>
                 </div>
                 <div class="row g-4 justify-content-center">
